# group-free-collectives

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: autotune_collectives.py  autotune_h100_4r.json  bench_multigroup_collectives.py  bench_symm_collectives.py  run_diffusion_shapes.sh
docs/: design.md
docs/specs/: 2026-05-12-symmetric-collectives-design.md  2026-06-13-dynamic-group-alloc-design.md
gfc/: __init__.py  autotune.py  buffer.py  config.py  env.py  group.py  logging.py  runtime.py  tma_probe.py
gfc/kernels/: __init__.py  _common.py  _ptx.py  all2all.py  all_gather.py  barrier.py  copy_engine.py  copy_pull.py  fused.py  p2p_put.py  tma_paths.py
tests/: _harness.py  run_all.sh  test_all2all.py  test_all_gather.py  test_barrier_repeated.py  test_barrier_stress.py  test_buffer_reuse.py  test_complex_groups.py  test_cross_kernel_publication.py  test_dynamic_group_alloc.py  test_init.py  test_overlap_order.py  test_p2p.py  test_perf_smoke.py  test_perf_smoke_tma.py  test_remote_copy_kernel.py  test_review_fixes.py  test_skeleton_unit.py  test_subgroup_barrier.py  test_tma_probe.py
