[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gfc"
version = "0.1.0"
description = "Group-Free Symmetric Collectives — Triton runtime for subgroup collectives over PyTorch Symmetric Memory"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GFC team" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "torch>=2.10",
    "triton>=3.6",
]

[tool.setuptools.packages.find]
include = ["gfc*"]
exclude = ["tests*", "benchmarks*", "docs*"]
